--- a/lms/package.json
+++ b/lms/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/google": "^3.0.2",
+    "@ai-sdk/react": "^3.0.6",
     "@clerk/nextjs": "^6.19.4",
     "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^5.0.1",
@@ -21,15 +23,17 @@
     "@sentry/nextjs": "^9.22.0",
     "@supabase/supabase-js": "^2.49.7",
     "@vapi-ai/web": "^2.3.0",
+    "ai": "^6.0.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "groq-sdk": "^0.37.0",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.511.0",
-    "next": "^15.5.9",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "next": "^16.1.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.56.4",
+    "react-markdown": "^10.1.0",
     "tailwind-merge": "^3.3.0",
     "zod": "^3.24.4"
   },
