--- a/lms/package.json
+++ b/lms/package.json
@@ -16,11 +16,12 @@
     "@hookform/resolvers": "^5.0.1",
     "@jsmastery/utils": "^1.0.2",
     "@opentelemetry/core": "^2.0.1",
+    "@opentelemetry/sdk-trace-base": "^2.2.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-label": "^2.1.6",
     "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-slot": "^1.2.2",
-    "@sentry/nextjs": "^9.22.0",
+    "@sentry/nextjs": "^10.32.1",
     "@supabase/supabase-js": "^2.49.7",
     "@vapi-ai/web": "^2.3.0",
     "ai": "^6.0.6",
